# ReactionsHelperBot

./: .gitignore  README.md  bot.py  flags.json  main.py  pyproject.toml
reactionshelperbot/: __main__.py  bot.py  flags.py  logger.py  settings.py
src/reactionshelperbot/: __main__.py  bot.py
