[build-system]
requires = ["setuptools>=40.8.0", "discord>=1.7.3"]
build-backend = "setuptools.build_meta"

[project]
name = "reactionshelperbot"
version = "1.0.7"
authors = [
  { name="DArkHekRoMaNT", email="darkhekromant@yandex.ru" },
]
description = "Discord Bot"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DArkHekRoMaNT/ReactionsHelperBot"
"Bug Tracker" = "https://github.com/DArkHekRoMaNT/ReactionsHelperBot/issues"
