[build-system]
requires = ["hatchling", "discord>=2.3.2"]
build-backend = "hatchling.build"

[project]
name = "reactionshelperbot"
version = "1.1.0"
authors = [
  { name="DArkHekRoMaNT", email="darkhekromant@yandex.ru" },
]
description = "Discord Bot"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DArkHekRoMaNT/ReactionsHelperBot"
"Bug Tracker" = "https://github.com/DArkHekRoMaNT/ReactionsHelperBot/issues"
